--- a/duckplayer/duckplayer-impl/src/main/res/layout/modal_duck_player.xml
+++ b/duckplayer/duckplayer-impl/src/main/res/layout/modal_duck_player.xml
@@ -31,6 +31,7 @@
         android:id="@+id/animationContainer"
         android:layout_height="wrap_content"
         app:cardCornerRadius="@dimen/keyline_2"
+        app:cardElevation="0dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent">
