--- a/autofill/autofill-impl/src/main/res/values-nb/strings-autofill-impl.xml
+++ b/autofill/autofill-impl/src/main/res/values-nb/strings-autofill-impl.xml
@@ -22,7 +22,7 @@
     <string name="saveLoginDialogButtonSave">Lagre passordet</string>
     <string name="saveLoginMissingUsernameDialogButtonSave">Lagre passordet</string>
     <string name="saveLoginDialogNotNow">Ikke lagre</string>
-    <string name="saveLoginDialogTitle">Vil du at DuckDuckGo skal lagre passordet ditt?</string>
+    <string name="saveLoginDialogTitle">Vil du lagre dette passordet?</string>
     <string name="saveLoginDialogMoreOptionsButtonLabel">Flere alternativer</string>
 
     <string name="useSavedLoginDialogTitle">Vil du bruke et lagret passord?</string>
@@ -123,7 +123,7 @@
     <string name="credentialManagementNoLoginsSavedTitle">Ingen passord er lagret ennå</string>
     <string name="credentialManagementAutofillToggleLabel">Lagre og fyll ut passord automatisk</string>
     <string name="credentialManagementAutofillToggleSubtitle">Passord lagres på enheten din på en sikker måte</string>
-    <string name="saveLoginDialogSubtitle">Passord lagres på enheten din på en sikker måte.</string>
+    <string name="saveLoginDialogSubtitle">DuckDuckGo-passord og -autofyll lagrer passord trygt på enheten din.</string>
     <string name="autofillManagementAddLogin">Legg til passord</string>
     <string name="credentialManagementEditLoginTitleHint">Tittel</string>
     <string name="autofillManagementDeletedConfirmation">Passordet er slettet</string>
@@ -221,5 +221,15 @@
     <string name="autofillManagementReportBreakageDialogNegativeButton">Avbryt</string>
     <string name="autofillManagementReportBreakageSuccessMessage">Takk! Rapporten din vil hjelpe oss med å gjøre DuckDuckGo bedre for alle.</string>
 
+    <!-- Save Dialog -->
+    <string name="onboardingSaveDialogKeyFeatureTitle">Viktige funksjoner</string>
+    <string name="onboardingSaveDialogFeature1Title">Sømløse pålogginger</string>
+    <string name="onboardingSaveDialogFeature1Subtitle">Du trenger ikke å huske påloggingsinformasjon.</string>
+    <string name="onboardingSaveDialogFeature2Title">Sikker lagring</string>
+    <string name="onboardingSaveDialogFeature2Subtitle">Passord er kryptert, lagres på enheten og låses med Android-mønsteret ditt eller PIN-koden din.</string>
+    <string name="onboardingSaveDialogFeature3Title">Synkroniser mellom enheter</string>
+    <string name="onboardingSaveDialogFeature3Subtitle">Ende-til-ende-kryptert og lett å konfigurere når du er klar.</string>
 
+    <string name="autofillDisableInSettingsSnackbarText">Du kan slå av passordlagring når som helst.</string>
+    <string name="autofillDisableInSettingsSnackbarAction">Åpne innstillinger</string>
 </resources>
